--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,16 @@ a {
 }
 
 .nav-button {
+    border-radius: 10px;
     padding: 2px 6px 2px 6px;
     border-top: 1px solid #CCCCCC;
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+}
+
+.nav-button a {
+    text-decoration: none;
 }
 
 .nav-button:hover {
