--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,25 @@
     transition: all 1s;
 }
 
+.card img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
 .card:hover {
     transform: translateY(-10px);
     height: 150px;
     width: 100px;
     border: 1px solid #1a57ba;
     box-shadow: .3em .3em .6em #528ff2;
+}
+
+.card:active {
+   /* position: absolute;*/
+    top: 50%;
+    left: 50%;
+    transform: scale(2.5) translate(-50%, -50%);
 }
 
 html {
