--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
 /* styles.css */
+
+@media (max-width: 768px) {
+    img {
+        width: 200px;
+        height: 200px;
+    }
+    #about {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .card-container {
     display: flex;
     flex-direction: row;
@@ -32,7 +44,7 @@
    /* position: absolute;*/
     top: 50%;
     left: 50%;
-    transform: scale(2.5) translate(-50%, -50%);
+    transform: scale(2.5) translate(50%, -50%);
 }
 
 html {
@@ -55,6 +67,11 @@ a {
 
 .about-left {
     flex-basis: 40%;
+}
+
+.about-left img {
+    max-width: 100%;
+    height: auto;
 }
 
 .about-right ul {
@@ -217,6 +234,7 @@ a.nav-link: visited {
 .contact-buttons {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
